--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,10 +19,12 @@
         >
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/brain_clear"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:tint="@color/white_HW"
+            android:tint="@color/black_HW"
+            android:src="@drawable/reset"
 
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
@@ -91,7 +93,7 @@
             android:paddingStart="16dp"
             android:layout_margin="6dp"
             android:textColor="@color/black_HW"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:textAlignment="center"
             android:background="@drawable/msg_shape"
             tools:ignore="RtlCompat" />
@@ -104,7 +106,7 @@
             android:layout_margin="6dp"
             android:background="@drawable/button_send_shape"
             android:text="发送"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:textColor="@color/textColor"/>
     </LinearLayout>
 
