--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,8 @@
     <color name="receiveMsg">#FFFFFF</color>
     <color name="sendMsg">#D5E6DF</color>
     <color name="textColor">#191919</color>
-    <color name="sendBtn">#14C254</color>
+    <color name="sendBtnTrue">#14C254</color>
+    <color name="sendBtnFalse">#A9A9A9</color>
     <color name="barColor">#FFFFFF</color>
 
     <color name="typeColor">#F2F2F2</color>
@@ -15,5 +16,6 @@
     <color name="black_HW">#191919</color>
     <color name="white_HW">#FCFCFC</color>
     <color name="grey_HW">#646464</color>
+    <color name="blue_HW">#0a58f6</color>
 
 </resources>
