--- a/app/src/main/res/drawable/send_shape_true.xml
+++ b/app/src/main/res/drawable/send_shape_true.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="20dp"/>
-    <solid android:color="@color/sendBtn"/>
+    <solid android:color="@color/sendBtnTrue"/>
     <padding
         android:left="2dp"
         android:right="2dp"
