--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -65,7 +65,7 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp">
+            android:layout_height="190dp">
 
             <TextView
                 android:id="@+id/textView5"
@@ -75,7 +75,9 @@
                 android:text="使用说明"
                 android:textColor="@color/textColor"
                 android:textSize="18sp"
-                tools:ignore="HardcodedText,RtlHardcoded" />
+                tools:ignore="HardcodedText,RtlHardcoded"
+
+                />
 
             <TextView
                 android:id="@+id/textView6"
@@ -115,13 +117,14 @@
                     android:src="@drawable/github"
                     android:layout_marginTop="14dp"
                     android:importantForAccessibility="no" />
+
                 <TextView
                     android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="14dp"
                     android:layout_marginStart="5dp"
-                    android:text="@string/github_site"/>
+                    android:layout_marginTop="14dp"
+                    android:text="@string/github_site" />
             </LinearLayout>
 
         </FrameLayout>
