--- a/app/src/main/res/drawable/send_button_select.xml
+++ b/app/src/main/res/drawable/send_button_select.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/send_shape_true"
+        android:background="?android:attr/selectableItemBackground"
         android:state_enabled="true"/>
     <item android:drawable="@drawable/send_shape_false"
+        android:background="?android:attr/selectableItemBackground"
         android:state_enabled="false"/>
 </selector>
