--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -112,7 +112,7 @@
                 android:layout_height="24dp"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="6dp"
-                android:background="@drawable/send_button_select"
+                android:background="@color/sendBtnTrue"
                 android:text="确认"
                 android:textColor="@color/textColor"
                 android:textSize="16sp"
@@ -128,7 +128,8 @@
                 android:text="获取"
                 android:textColor="@color/textColor"
                 android:textSize="16sp"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                />
 
             <TextView
                 android:id="@+id/goToAKey"
