--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,14 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".AboutActivity"
     android:orientation="vertical"
-    android:background="@color/barColor">
+    android:fitsSystemWindows="true">
 
-    <ImageView
-        android:id="@+id/back_to_main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/back_to"
-        android:contentDescription="@string/ImgDescription" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:orientation="horizontal"
+        android:background="@drawable/bar_shape">
+        <ImageView
+            android:id="@+id/back_to_main"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/back_to"
+            android:contentDescription="@string/ImgDescription" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/LLayout"
@@ -77,26 +83,28 @@
                 android:layout_gravity="left|top"
                 android:text="API_KEY"
                 android:textColor="@color/textColor"
-                android:textSize="18sp"
-                tools:ignore="HardcodedText,RtlHardcoded" />
+                android:textSize="16sp"
+                tools:ignore="HardcodedText,RtlHardcoded"
+                android:layout_marginStart="6dp"
+                android:layout_marginEnd="6dp"/>
 
             <EditText
                 android:id="@+id/edit_apikey"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="24dp"
                 android:layout_gravity="top|end"
                 android:layout_marginStart="6dp"
                 android:layout_marginEnd="6dp"
-                android:layout_weight="1"
                 android:background="@drawable/akey_shape"
                 android:hint="Type your API_KEY here"
                 android:imeOptions="actionDone"
                 android:importantForAutofill="no"
                 android:inputType="text"
-                android:paddingStart="16dp"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
                 android:textAlignment="center"
                 android:textColor="@color/black_HW"
-                android:textSize="16sp"
+                android:textSize="12sp"
                 tools:ignore="HardcodedText,RtlCompat,RtlSymmetry" />
 
         </LinearLayout>
