添加英语模式2024年4月13日

--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -22,7 +22,7 @@
             android:id="@+id/bot_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="KunKun"
+            android:text="@string/bot_name"
             android:textSize="12sp"
             android:textColor="@color/black_HW"
             android:textStyle="bold"
