--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,8 +17,11 @@
     <color name="black_HW">#191919</color>
     <color name="white_HW">#FCFCFC</color>
     <color name="grey_HW">#646464</color>
+    <color name="grey_bg">#DDDDDD</color>
     <color name="blue_HW">#0a58f6</color>
 
     <color name="linkColor">#008577</color>
+
+    <color name="red">#eb4542</color>
 
 </resources>
